--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "devDependencies": {
     "chart.js": "^2.6.0",
     "webpack": "^5.93.0"
+  },
+  "dependencies": {
+    "nano-time": "^1.0.0",
+    "nanotimer": "^0.3.15"
   }
 }
